# desktop_homunculus

./: .env  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEAD_CODE_AUDIT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.jp.md  README.md  TS_SDK_AND_MODS_DEAD_CODE_AUDIT.md  biome.json  build.rs  introduction.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  searchindex.js  tailwind.config.js  toc.html  toc.js  turbo.json  version.toml  what-is-mod.html
crates/homunculus_api/: Cargo.toml
crates/homunculus_api/src/: app.rs  commands.rs  effects.rs  entities.rs  error.rs  gpt.rs  lib.rs  mods.rs  preferences.rs  reactor.rs  scripts.rs  settings.rs  shadow_panel.rs  speech.rs  vrm.rs  vrma.rs  web.rs  webview.rs
crates/homunculus_api/src/app/: exit.rs
crates/homunculus_api/src/cameras/: global_viewport.rs  world_2d.rs
crates/homunculus_api/src/commands/: send.rs  stream.rs
crates/homunculus_api/src/entities/: find.rs  name.rs  transform.rs
crates/homunculus_api/src/gpt/: all_models.rs  chat.rs  elmer_default_system_prompt.md  model.rs  system_prompt.rs  system_prompt_response_format.md  use_web_search.rs  voicevox_speaker.rs
crates/homunculus_api/src/scripts/: deno.rs
crates/homunculus_api/src/speech/: voicevox.rs
crates/homunculus_api/src/vrm/: despawn.rs  fetch_all.rs  look.rs  observer.rs  spawn.rs  state.rs  vrma.rs  wait_load_by_name.rs
crates/homunculus_api/src/web/: close.rs  is_closed.rs  open.rs
crates/homunculus_api/src/webview/: api.js  caller.js  close.rs  is_closed.rs  open.rs  webview.js  webviewEntity.js
crates/homunculus_core/: Cargo.toml  README.md
crates/homunculus_core/src/: components.rs  consts.rs  error.rs  events.rs  lib.rs  path.rs  render_layers.rs  resources.rs  schema.rs  system_param.rs  system_set.rs
crates/homunculus_core/src/events/: vrm.rs
crates/homunculus_core/src/schema/: mod_asset_id.rs  mods.rs  webview.rs
crates/homunculus_core/src/system_param/: coordinate.rs  mascot_tracker.rs  mesh_aabb.rs  monitors.rs  windows.rs
crates/homunculus_deno/: Cargo.toml  README.md  build.rs
crates/homunculus_deno/src/: asset.rs  lib.rs  runtime.rs
crates/homunculus_drag/: Cargo.toml  README.md
crates/homunculus_drag/src/: lib.rs
crates/homunculus_effects/: Cargo.toml
crates/homunculus_effects/src/: effect.rs  lib.rs  sound.rs  stamp.rs
crates/homunculus_hit_test/: Cargo.toml
crates/homunculus_hit_test/src/: lib.rs
crates/homunculus_http_server/: Cargo.toml
crates/homunculus_http_server/src/: extract.rs  lib.rs  route.rs  state.rs
crates/homunculus_http_server/src/route/: app.rs  cameras.rs  commands.rs  displays.rs  effects.rs  entities.rs  gpt.rs  mods.rs  preferences.rs  scripts.rs  settings.rs  vrm.rs  vrma.rs  webviews.rs
crates/homunculus_lua/: Cargo.toml  README.md
crates/homunculus_lua/src/: flow.rs  global.rs  global_windows.rs  lib.rs  load.rs  lua_args.rs  prefs.rs  random.rs  shadow_panel.rs  util.rs  vrm.rs  vrma.rs  webview.rs
crates/homunculus_lua/src/vrm/: find_by_name.rs  move_to.rs  observe_on.rs  observer.rs  on_command.rs  on_load.rs  on_range_timer.rs  on_state_enter.rs  on_timer.rs  pointer.rs  rescale.rs  spawn.rs  speak.rs  state.rs
crates/homunculus_lua/src/vrma/: chain.rs  play.rs  repeat.rs  spawn.rs
crates/homunculus_lua/src/webview/: on_listen.rs  send.rs  webview.js
crates/homunculus_macros/: Cargo.toml  README.md
crates/homunculus_macros/src/: lib.rs
crates/homunculus_mod/: Cargo.toml
crates/homunculus_mod/src/: lib.rs  load.rs  startup_scripts.rs  system_menu.rs
crates/homunculus_prefs/: Cargo.toml
crates/homunculus_prefs/src/: lib.rs  vrm_transform.rs
crates/homunculus_screen/: Cargo.toml  README.md
crates/homunculus_screen/src/: displays.rs  global_windows.rs
crates/homunculus_screen/src/displays/: macos.rs  windows.rs
crates/homunculus_screen/src/global_windows/: macos.rs  windows.rs
crates/homunculus_shadow_panel/: Cargo.toml  README.md
crates/homunculus_shadow_panel/src/: lib.rs  shadow_panel.wgsl
crates/homunculus_sitting/: Cargo.toml  README.md
crates/homunculus_sitting/src/: lib.rs
crates/homunculus_speech/: Cargo.toml
crates/homunculus_speech/src/: lib.rs  loader.rs  mfcc.rs  subtitle.rs  voicevox.rs
crates/homunculus_speech/src/voicevox/: audio_query.rs  loader.rs
engine/: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  about.hbs  about.toml  build.rs  runtime-versions.toml
engine/.cargo/: config.toml
engine/.claude/: memo.md
engine/.claude/rules/: bevy-patterns.md  rust-style.md
engine/.claude/skills/sync-api-docs/: SKILL.md
engine/crates/homunculus_api/: Cargo.toml  README.md
engine/crates/homunculus_api/src/: assets.rs  audio.rs  avatar.rs  cameras.rs  character.rs  display.rs  (+16 more)
engine/crates/homunculus_audio/: Cargo.toml
engine/crates/homunculus_cli/: Cargo.toml
engine/crates/homunculus_core/: Cargo.toml  README.md
engine/crates/homunculus_drag/: Cargo.toml
engine/crates/homunculus_effects/: README.md
engine/crates/homunculus_hit_test/: Cargo.toml  README.md
engine/crates/homunculus_http_server/: Cargo.toml  README.md
engine/crates/homunculus_mcp/: Cargo.toml
engine/crates/homunculus_microphone/: Cargo.toml
engine/crates/homunculus_mod/: Cargo.toml  README.md
engine/crates/homunculus_power_saver/: Cargo.toml  README.md
engine/crates/homunculus_prefs/: Cargo.toml  README.md
engine/crates/homunculus_screen/: Cargo.toml
engine/crates/homunculus_sitting/: Cargo.toml
engine/crates/homunculus_speech/: Cargo.toml
engine/crates/homunculus_stt/: Cargo.toml
engine/crates/homunculus_tray/: Cargo.toml
engine/crates/homunculus_utils/: Cargo.toml
engine/crates/homunculus_windows/: Cargo.toml
engine/credits/: CREDITS.md
engine/credits/licenses/: RUST_THIRD_PARTY.md
engine/scripts/: build_pkg.sh  bump_version.py  patch_whisper_cuda.py  release_windows.py  setup.py  setup_cef.py  setup_ci.py  stage_runtime.py  utils.py
engine/src/: cef_fetch.js  cef_fetch.rs  graceful_shutdown.rs  main.rs
(+2118 files in other folders)
