[package]
name = "desktop_homunculus"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"
description = "Desktop mascot built with bevy"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/bevy_baby"
keywords = ["bevy", "desktop", "game"]
categories = ["games"]
publish = false

[dependencies]
bevy = { version = "0.16", features = [
    "file_watcher",
    "bevy_picking",
    "serialize",
] }
bevy_webview_wry = { version = "0.4", features = ["api"] }
bevy_vrma = { path = "../bevy_vrma" }
bevy_flurx = { version = "0.11", features = ["side-effect", "state"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
serde_json = "1"
winit = "0.30"
rand = "0.9"
crossbeam = "0.8.4"
itertools = "0.14"
anyhow = "1.0.96"
bevy-inspector-egui = { version = "0.31", optional = true }
tracing-appender = "0.2.3"

[target.'cfg(target_os="macos")'.dependencies]
core-graphics = { version = "0.24.0" }
core-foundation = { version = "0.10.0" }
objc2 = { version = "0.6", features = ["std"] }
objc2-foundation = { version = "0.3" }
objc2-app-kit = { version = "0.3", features = [
    "NSWindow",
    "NSView",
    "NSApplication",
] }
apple-sys = { version = "0.2", features = ["IOKit"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper", branch = "v0.16" }

[build-dependencies]
embed-resource = "3"

[features]
default = []
develop = ["dep:bevy-inspector-egui"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true