[package]
name = "homunculus_effects"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_vrm1 = { workspace = true }
serde = { workspace = true }
rand = "0.9"
homunculus_core = { workspace = true }
homunculus_screen = { workspace = true }

[lints]
workspace = true
