[package]
name = "homunculus_http_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
bevy_vrm1 = { workspace = true }
homunculus_core = { workspace = true }
homunculus_api = { workspace = true, features = ["axum"] }
homunculus_effects = { workspace = true }
homunculus_prefs = { workspace = true }
homunculus_screen = { workspace = true }
homunculus_speech = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_flurx = { workspace = true }
futures = { version = "0.3" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-channel = { workspace = true }

[dev-dependencies]
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"
homunculus_power_saver = { workspace = true }

[lints]
workspace = true
