[package]
name = "homunculus_lua"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
bevy_mod_scripting = { workspace = true }
bevy_vrm1 = { workspace = true, features = ["serde"] }
bevy_flurx = { workspace = true }
bevy_webview_wry = { workspace = true }
homunculus_core = { workspace = true }
homunculus_shadow_panel = { workspace = true }
#homunculus_screen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true, features = ["std"] }
rand = "0.9"
paste = { version = "1" }
#homunculus_sitting = { workspace = true }
homunculus_http_server = { workspace = true }
homunculus_speech = { workspace = true }
homunculus_prefs = { workspace = true }
homunculus_macros = { workspace = true }

[dev-dependencies]
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper", branch = "v0.16" }

[lints]
workspace = true