[package]
name = "homunculus_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"

[dev-dependencies]
bevy = { workspace = true }

[lints]
workspace = true
