[package]
name = "homunculus_prefs"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_vrm1 = { workspace = true }
homunculus_core = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { workspace = true }

[lints]
workspace = true
