[package]
name = "homunculus_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-channel = { workspace = true }
async-broadcast = { workspace = true }
bevy_vrm1 = { workspace = true }
homunculus_core = { workspace = true }
homunculus_mod = { workspace = true }
homunculus_audio = { workspace = true }
chrono = { workspace = true }
homunculus_effects = { workspace = true }
homunculus_prefs = { workspace = true }
homunculus_shadow_panel = { workspace = true }
homunculus_microphone = { workspace = true }
homunculus_speech = { workspace = true }
homunculus_power_saver = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, optional = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_tweening = "0.15"
homunculus_utils = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
default = []
develop = []
axum = ["dep:axum"]
cuda = ["homunculus_microphone/cuda"]
metal = ["homunculus_microphone/metal"]
openapi = ["dep:utoipa", "homunculus_utils/openapi", "homunculus_core/openapi", "homunculus_audio/openapi", "homunculus_microphone/openapi"]

[lints]
workspace = true
