[package]
name = "homunculus_audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = "0.25"
homunculus_core = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
default = []
openapi = ["dep:utoipa"]

[lints]
workspace = true
