[package]
name = "homunculus_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "hmcs"
path = "src/main.rs"

[dependencies]
homunculus_prefs = { path = "../homunculus_prefs", default-features = false }
homunculus_utils = { path = "../homunculus_utils", default-features = false }
clap             = { workspace = true }
comfy-table      = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
