[package]
name = "homunculus_hit_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = ["bevy_render"] }
bevy_vrm1 = { workspace = true }
bevy_egui = { workspace = true, optional = true }
bevy_cef = { workspace = true }
homunculus_core = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
develop = ["dep:bevy_egui"]

[lints]
workspace = true