[package]
name = "homunculus_http_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "fs"] }
tokio-stream = "0.1"
bevy_vrm1 = { workspace = true }
homunculus_core = { workspace = true, features = ["openapi"] }
homunculus_api = { workspace = true, features = ["axum", "openapi"] }
homunculus_utils = { workspace = true, features = ["bevy"] }
homunculus_audio = { workspace = true }
homunculus_effects = { workspace = true }
homunculus_mcp = { workspace = true }
homunculus_microphone = { workspace = true, features = ["openapi"] }
homunculus_prefs = { workspace = true }
async-broadcast = { workspace = true }
homunculus_screen = { workspace = true, features = ["openapi"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bevy_flurx = { workspace = true }
futures = { version = "0.3" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-channel = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
rfd = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
