[package]
name = "homunculus_mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
homunculus_api = { workspace = true }
homunculus_core = { workspace = true }
rmcp = { version = "1.1.0", features = ["server", "transport-streamable-http-server"] }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
