[package]
name = "homunculus_mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
futures = { version = "0.3" }
bevy_vrm1 = { workspace = true }
crossbeam-channel = { workspace = true }
homunculus_api = { workspace = true }
homunculus_core = { workspace = true, features = ["mcp"] }
homunculus_utils = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "time"] }

[lints]
workspace = true
