[package]
name = "homunculus_microphone"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
cpal = { version = "0.17" }
thiserror = { workspace = true }


[lints]
workspace = true
