[package]
name = "homunculus_microphone"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
homunculus_utils = { workspace = true }
async-broadcast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true, features = ["stream"] }
tokio-util = { workspace = true }
crossbeam-channel = { workspace = true }
futures-lite = { workspace = true }

num_cpus = { workspace = true }
whisper-rs = "0.16"
cpal = "0.15"
rubato = "0.16"
webrtc-vad = "0.4"
tracing = "0.1"

utoipa = { workspace = true, optional = true }

[features]
default = []
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
openapi = ["dep:utoipa"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice"] }
block2 = "0.6"

[lints]
workspace = true
