[package]
name = "homunculus_mod"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
serde_json = { workspace = true }
homunculus_core = { workspace = true }
homunculus_utils = { workspace = true }
futures-lite = "2"

[lints]
workspace = true
