[package]
name = "homunculus_mod"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
serde_json = { workspace = true }
homunculus_core = { workspace = true }
homunculus_utils = { workspace = true }
futures-lite = "2"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
