[package]
name = "homunculus_speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_vrm1 = { workspace = true }
homunculus_core = { workspace = true }
serde = { workspace = true }
async-channel = { workspace = true }

[lints]
workspace = true
