[package]
name = "homunculus_tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_tray_icon = { workspace = true }
homunculus_core = { workspace = true }
homunculus_utils = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }

[lints]
workspace = true
